--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,3 +15,6 @@ jobs:
 
       - name: cmake build
         run: mkdir build && cd build && cmake .. && make
+
+      - name: run
+        run: cd build && ./smartserial_example
