ci: update checkout

--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -7,12 +7,9 @@ jobs:
     runs-on: macOS-latest
 
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v3
         with:
-          fetch-depth: 1
-
-      - name: Submodules
-        run: git submodule update --init --recursive
+          submodules: true
 
       - name: CMake Build
         run: |
